--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -130,32 +130,6 @@ textarea {
 * html #container #sidebar {
   overflow-x: hidden;
 }
-/* line 61, ../../../frontend/sass/_base.sass */
-#container #sidebar #event-detail-view {
-  float: none;
-  display: block;
-  z-index: 1;
-  margin: 15px 0 0 592px;
-  -moz-border-radius-topright: 8px;
-  -webkit-border-top-right-radius: 8px;
-  -o-border-top-right-radius: 8px;
-  -ms-border-top-right-radius: 8px;
-  -khtml-border-top-right-radius: 8px;
-  border-top-right-radius: 8px;
-  -moz-border-radius-bottomright: 8px;
-  -webkit-border-bottom-right-radius: 8px;
-  -o-border-bottom-right-radius: 8px;
-  -ms-border-bottom-right-radius: 8px;
-  -khtml-border-bottom-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  height: 100%;
-  min-height: 1000px;
-  position: fixed;
-}
-/* line 71, ../../../frontend/sass/_base.sass */
-#container #sidebar #event-detail-view.selected {
-  background: #f7f2d8;
-}
 
 /* line 39, ../../../../../.rvm/gems/ree-1.8.7-2010.02@hyperlocalcu/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_typography.scss */
 body {
@@ -2345,10 +2319,9 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 
 /* line 24, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view {
-  position: fixed;
+  position: relative;
+  top: 10px;
   color: #444444;
-  top: 42px;
-  left: 630px;
   padding: 5px 10px 5px 15px;
   border: 1px solid #cccccc;
   border-width: 1px 1px 1px 0;
@@ -2366,6 +2339,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   border-bottom-right-radius: 5px;
   background: white;
   width: 318px;
+  display: none;
 }
 /* line 2, ../../../frontend/sass/events/billpay/_detail.sass */
 #event-detail-view .processing-summary {
@@ -2522,23 +2496,28 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   width: 155px;
 }
 /* line 38, ../../../frontend/sass/events/_detail.sass */
+#event-detail-view.fixed {
+  position: fixed;
+  top: 10px;
+}
+/* line 41, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view #event-detail-wrapper {
   min-height: 110px;
   width: 323px;
 }
-/* line 41, ../../../frontend/sass/events/_detail.sass */
+/* line 44, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .top {
   overflow: hidden;
   *zoom: 1;
   margin: 0 0 15px;
 }
-/* line 44, ../../../frontend/sass/events/_detail.sass */
+/* line 47, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .top .date {
   float: left;
   color: #7b7b7b;
   font-size: 10px;
 }
-/* line 48, ../../../frontend/sass/events/_detail.sass */
+/* line 51, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .top .close {
   float: right;
   position: absolute;
@@ -2546,43 +2525,43 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   right: 10px;
   font-size: 10px;
 }
-/* line 54, ../../../frontend/sass/events/_detail.sass */
+/* line 57, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .name-and-amount {
   margin: 0 0 0.5em 0;
 }
-/* line 56, ../../../frontend/sass/events/_detail.sass */
+/* line 59, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .name-and-amount .amount {
   font-size: 16px;
   float: right;
   line-height: 1em;
 }
-/* line 60, ../../../frontend/sass/events/_detail.sass */
+/* line 63, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .name-and-amount h3 {
   font-size: 16px;
   line-height: 1em;
 }
-/* line 64, ../../../frontend/sass/events/_detail.sass */
+/* line 67, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .deposit .amount {
   color: #009900;
 }
-/* line 67, ../../../frontend/sass/events/_detail.sass */
+/* line 70, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location {
   padding: 5px 0 12px 0;
   font-size: 11px;
   overflow: hidden;
   *zoom: 1;
 }
-/* line 71, ../../../frontend/sass/events/_detail.sass */
+/* line 74, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .map {
   margin: 0 13px 0 0;
   float: left;
 }
-/* line 74, ../../../frontend/sass/events/_detail.sass */
+/* line 77, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .map img {
   width: 130px;
   border: 1px solid #cccccc;
 }
-/* line 78, ../../../frontend/sass/events/_detail.sass */
+/* line 81, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .address h2, #event-detail-view .location .address h3 {
   margin: 0;
   padding: 0;
@@ -2593,19 +2572,19 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   font-weight: bold;
   margin: 0 0 0.3em;
 }
-/* line 84, ../../../frontend/sass/events/_detail.sass */
+/* line 87, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .address h2 {
   font-size: 15px;
 }
-/* line 86, ../../../frontend/sass/events/_detail.sass */
+/* line 89, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .address h3 {
   font-size: 11px;
 }
-/* line 88, ../../../frontend/sass/events/_detail.sass */
+/* line 91, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .address p {
   margin: 0;
 }
-/* line 90, ../../../frontend/sass/events/_detail.sass */
+/* line 93, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .address .rating {
   margin-top: 10px;
   display: inline-block;
@@ -2687,11 +2666,11 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   color: #009900;
   font-weight: bold;
 }
-/* line 96, ../../../frontend/sass/events/_detail.sass */
+/* line 99, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .location .address div.comment .buttons p {
   font-size: 10px;
 }
-/* line 102, ../../../frontend/sass/events/_detail.sass */
+/* line 105, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .available-service {
   margin: 10px 0 0;
   border: 1px solid #92c5e0;
@@ -2701,12 +2680,12 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   border-width: 1px 0;
   background: url(/images/background.png) repeat-x left -250px;
 }
-/* line 110, ../../../frontend/sass/events/_detail.sass */
+/* line 113, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .available-service h2 {
   font-size: 14px;
   margin: 0;
 }
-/* line 113, ../../../frontend/sass/events/_detail.sass */
+/* line 116, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .available-service p {
   margin: 0;
   padding: 0;
@@ -2714,7 +2693,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   outline: 0;
   margin: 0.2em 0 0.5em;
 }
-/* line 116, ../../../frontend/sass/events/_detail.sass */
+/* line 119, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .available-service ul {
   list-style: none;
   margin: 0;
@@ -2754,7 +2733,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #event-detail-view .available-service ul li:last-child, #event-detail-view .available-service ul li.last {
   padding-right: 0;
 }
-/* line 121, ../../../frontend/sass/events/_detail.sass */
+/* line 124, ../../../frontend/sass/events/_detail.sass */
 #event-detail-view .available-service ul li {
   margin: 0 0 0.5em;
 }
