--- a/public/javascripts/compiled/views/members/events/row.handlebars
+++ b/public/javascripts/compiled/views/members/events/row.handlebars
@@ -2,7 +2,7 @@
   <span>{{ formatted_timestamp }}<span>
 </td>
 <td class="name">
-  <p class="name">{{ description }}</p>
+  <p class="name"><a href="#events/{{ id }}">{{ description }}</a></p>
   {{#meta}}
     <p class="meta">{{ . }}</p>
   {{/meta}}
