Added header and cleaned up item selection algorithm

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,10 @@
 
 %body
   #container
+  
+    #header
+      %h1= link_to 'Vantage Credit Union', root_path
+
     #global
       %ul
         - if user_signed_in?
