--- a/frontend/sass/_base.sass
+++ b/frontend/sass/_base.sass
@@ -39,9 +39,9 @@ textarea
   line-height: 1.4em
 
 #container
-  +column(27)
+  +column(24)
   margin: 0 40px
-  padding: 80px 0 0
+  padding: 0
   a
     +link-colors($link_color, $link_color)
   #main
