--- a/frontend/sass/events/_detail.sass
+++ b/frontend/sass/events/_detail.sass
@@ -13,6 +13,8 @@
 @import events/card/detail
 @import events/check/detail
 
+//These need to be defined outside of the event-detail-view because the scrollpane creates a clone outside of the parent to check the width
+
 #event-detail
   width: 318px
   padding-right: 5px
