--- a/frontend/sass/accounts/_all.sass
+++ b/frontend/sass/accounts/_all.sass
@@ -40,6 +40,9 @@ $left_account_padding = 12px
             top: -1px
             left: -$left_account_padding - 1
             height: 100px
+            h3, .balance
+              font-size: 15px
+              line-height: 18px
   .subaccounts
     border: 1px solid #b4b4b4
     border-width: 1px 0
