Added daily balance chart

--- a/frontend/views/accounts/subaccount.handlebars
+++ b/frontend/views/accounts/subaccount.handlebars
@@ -19,3 +19,7 @@
   |
   <a href="#" class="manage">manage account &#9662;</a>
 </div>
+
+{{#selected}}
+  <div id="balance-chart"></div>
+{{/selected}}
