--- a/frontend/sass/accounts/_all.sass
+++ b/frontend/sass/accounts/_all.sass
@@ -27,6 +27,7 @@ $left_account_padding = 12px
           .balance
             color: #00890b
           &.selected
+            +clearfix
             +box-shadow(#eee, 3px)
             border: none
             border: 1px solid #b4b4b4
@@ -39,10 +40,13 @@ $left_account_padding = 12px
             position: relative
             top: -1px
             left: -$left_account_padding - 1
-            height: 100px
             h3, .balance
               font-size: 15px
               line-height: 18px
+            #balance-chart
+              display: none
+              float: right
+              margin: 0.7em 0 0.3em
   .subaccounts
     border: 1px solid #b4b4b4
     border-width: 1px 0
