--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -2818,6 +2818,8 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 }
 /* line 29, ../../../frontend/sass/accounts/_all.sass */
 #accounts .share-accounts.selected .subaccounts .subaccount.selected, #accounts .loan-accounts.selected .subaccounts .subaccount.selected {
+  overflow: hidden;
+  *zoom: 1;
   -moz-box-shadow: #eeeeee 3px 1px 5px 0;
   -webkit-box-shadow: #eeeeee 3px 1px 5px 0;
   -o-box-shadow: #eeeeee 3px 1px 5px 0;
@@ -2833,7 +2835,6 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   position: relative;
   top: -1px;
   left: -13px;
-  height: 100px;
 }
 /* line 43, ../../../frontend/sass/accounts/_all.sass */
 #accounts .share-accounts.selected .subaccounts .subaccount.selected h3, #accounts .share-accounts.selected .subaccounts .subaccount.selected .balance, #accounts .loan-accounts.selected .subaccounts .subaccount.selected h3, #accounts .loan-accounts.selected .subaccounts .subaccount.selected .balance {
@@ -2841,54 +2842,60 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   line-height: 18px;
 }
 /* line 46, ../../../frontend/sass/accounts/_all.sass */
+#accounts .share-accounts.selected .subaccounts .subaccount.selected #balance-chart, #accounts .loan-accounts.selected .subaccounts .subaccount.selected #balance-chart {
+  display: none;
+  float: right;
+  margin: 0.7em 0 0.3em;
+}
+/* line 50, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts {
   border: 1px solid #b4b4b4;
   border-width: 1px 0;
   padding: 0.2em 0;
   padding-left: 12px;
 }
-/* line 51, ../../../frontend/sass/accounts/_all.sass */
+/* line 55, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount {
   line-height: 1.5em;
   padding: 1em 1.5em 1em 0;
   border-bottom: 1px solid #dcdcdc;
   z-index: 3;
 }
-/* line 56, ../../../frontend/sass/accounts/_all.sass */
+/* line 60, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount:last-child {
   border: none;
 }
-/* line 58, ../../../frontend/sass/accounts/_all.sass */
+/* line 62, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount h3 {
   font-size: 12px;
   font-weight: bold;
   margin: 0 0 0.2em;
   line-height: 1.5em;
 }
-/* line 63, ../../../frontend/sass/accounts/_all.sass */
+/* line 67, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount .meta {
   color: #7b7b7b;
   font-size: 10px;
 }
-/* line 66, ../../../frontend/sass/accounts/_all.sass */
+/* line 70, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount .meta .subaccount-number {
   margin-right: 2px;
 }
-/* line 68, ../../../frontend/sass/accounts/_all.sass */
+/* line 72, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount .meta .manage {
   margin-left: 2px;
 }
-/* line 70, ../../../frontend/sass/accounts/_all.sass */
+/* line 74, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount .balances {
   float: right;
   text-align: right;
 }
-/* line 73, ../../../frontend/sass/accounts/_all.sass */
+/* line 77, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount .balances .balance {
   font-weight: bold;
   margin-bottom: 0.2em;
 }
-/* line 76, ../../../frontend/sass/accounts/_all.sass */
+/* line 80, ../../../frontend/sass/accounts/_all.sass */
 #accounts .subaccounts .subaccount .balances .available {
   color: #7b7b7b;
   font-size: 10px;
