Added login info on top right

--- a/frontend/sass/_timeline.sass
+++ b/frontend/sass/_timeline.sass
@@ -123,7 +123,7 @@ table#timeline
           border-top-color: $timeline_row_selected_border_color
           background: $timeline_row_selected_color
       &.reward, &.deposit
-        td, th
+        td.amount, th.amount
           color: $deposit_color
       &.penalty
         td, th
