--- a/frontend/sass/_base.sass
+++ b/frontend/sass/_base.sass
@@ -10,6 +10,7 @@ $timeline_row_date_border_color = lighten(#A7CFE6, 10)
 $timeline_row_stripe_color = #f6f3e9
 
 $timeline_row_selected_color = #F7F2D8
+//$timeline_row_selected_color = lighten(#ECF4FA, 2)
 
 $timeline_row_border_color = lighten(#A7CFE6, 15)
 
