--- a/frontend/sass/accounts/_all.sass
+++ b/frontend/sass/accounts/_all.sass
@@ -40,6 +40,7 @@ $left_account_padding = 12px
             position: relative
             top: -1px
             left: -$left_account_padding - 1
+            min-height: 127px
             h3, .balance
               font-size: 15px
               line-height: 18px
