--- a/frontend/sass/members/_all.sass
+++ b/frontend/sass/members/_all.sass
@@ -1,1 +1,36 @@
 @import members/billpay_signup
+
+#global
+  text-align: right
+  color: #626262
+  font-size: 11px
+  ul
+    +clearfix
+    +divided-horizontal-list(5px, #ccc)
+    text-align: right
+    li
+      line-height: 1.2em
+  #messages-notice
+    float: right
+    margin: 0.5em 0 1.2em
+    a.inbox
+      font-size: 10px
+      padding-left: 20px
+      display: block
+      background: url(/images/icons/email.png) no-repeat left top
+      line-height: 13px
+      position: relative
+      top: -1px
+  #login-status
+    clear: right
+    margin: 0.2em 0 0.5em
+    float: right
+    a
+      font-weight: bold
+      position: relative
+      top: -1px
+    .last-login
+      clear: right
+      margin: 0.2em 0 0
+      font-size: 10px
+      color: #969696
