--- a/frontend/sass/accounts/_all.sass
+++ b/frontend/sass/accounts/_all.sass
@@ -72,6 +72,18 @@ $left_account_padding = 12px
           margin-right: 2px
         .manage
           margin-left: 2px
+      .left
+        float: left
+        h4
+          font-size: 10px
+          font-weight: bold
+          color: #666
+          margin: 1em 0 0.5em
+        ul.statements
+          +divided-horizontal-list(6px, #ccc)
+          li
+            line-height: 1.2em
+            font-size: 10px
       .balances
         float: right
         text-align: right
