--- a/frontend/sass/accounts/_all.sass
+++ b/frontend/sass/accounts/_all.sass
@@ -45,7 +45,7 @@ $left_account_padding = 12px
               font-size: 15px
               line-height: 18px
             #balance-chart
-              display: none
+              //display: none
               float: right
               margin: 0.7em 0 0.3em
   .subaccounts
