Work on refactoring feedbacks to use Redis

--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -22,7 +22,7 @@
 
     Backbone.emulateHTTP = true;
 
-    App.currentMember = new App.model.Member(#{@account.member.to_json});
+    App.currentMember = new App.model.Member(App.model.Member.unwrappedAttributes(#{@account.member.to_json}));
 
     var eventList = new App.model.EventList();
     eventList.url = "/accounts/#{@account.id}/events";
