--- a/app/views/feedbacks/_dashboard.html.haml
+++ b/app/views/feedbacks/_dashboard.html.haml
@@ -1,8 +1,6 @@
 #subject-overview
 
-#timeline-loading Loading...
-
-%table#timeline{:style => 'display: none;'}
+%table#timeline
   %tbody.ui-widget-content
 
 = content_for :sidebar do
