--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,4 +1,8 @@
-#timeline-loading [dashboard]
+#timeline-loading 
+  %h3 Dashboard ("Incomplete" would be an understatement)
+  %p [The member dashboard could show a summary of all accounts, recent promotions, a "Messages" area for recent messages from the CU, etc.]
+  %p
+    %strong Click on the subaccounts to the right to see the main interface ->
 
 = content_for :sidebar do
   #event-detail-view{:style => "display: none;"}
