--- a/frontend/sass/_timeline.sass
+++ b/frontend/sass/_timeline.sass
@@ -44,7 +44,7 @@ table#timeline
   thead
     tr
       th, td
-        background: #007B82
+        +linear-gradient(color-stops(#999, #333))
       td.date
         width: 60px
   tbody
