--- a/frontend/views/accounts/subaccount_list.handlebars
+++ b/frontend/views/accounts/subaccount_list.handlebars
@@ -1,3 +1,17 @@
 <h2>{{title}}</h2>
 
 <div class="subaccounts"></div>
+
+<div class="totals">
+  <span class="label">Total {{title}}</span>
+  <span class="total">{{{total}}}</span>
+</div>
+
+<div class="offer" style="display: none;">
+  <h2>Can we help your money earn money?</h2>
+  <p>Your share account balance has been over $4,000 for the past three months.  Would you like to consider opening a money market account to earn more on your balance?</p>
+  <ul>
+    <li class="yes"><a href="#">Sure, show me more.</a></li>
+    <li class="no"><a href="#">No, thanks.</a></li>
+  </ul>
+</div>
