--- a/frontend/views/accounts/timeline.handlebars
+++ b/frontend/views/accounts/timeline.handlebars
@@ -1,3 +1,14 @@
+<div class="navigation">
+  <div class="search">
+    <input type="text" placeholder="Search by name, date, or amount">
+    <button>Search</button>
+  </div>
+  <div class="account-and-dates">
+    <a href="#" class="account">Rewards Checking &#9662;</a>
+    transactions from the past
+    <a href="#" class="dates">30 days &#9662;</a>
+  </div>
+</div>
 <table id="timeline">
   <thead class="ui-widget-header">
     <tr>
