--- a/frontend/views/common/feedback/timeline/row.handlebars
+++ b/frontend/views/common/feedback/timeline/row.handlebars
@@ -5,7 +5,7 @@
   {{#comment}}
   <p class="description">{{ . }}</p>
   {{/comment}}
-  <p class="meta">Feedback provided by {{ member_name }} for service on {{ formatted_service_timestamp }} | <a href="#">Create a service request</a></p>
+  <p class="meta">Feedback provided by {{ member_name }} for service on {{ formatted_service_timestamp }} | <a href="#">Create a ticket</a></p>
 </td>
 <td class="rating"></td>
 
