--- a/frontend/views/accounts/subaccount.handlebars
+++ b/frontend/views/accounts/subaccount.handlebars
@@ -24,5 +24,9 @@
   <div class="left">
   </div>
 
-  <div id="balance-chart"></div>
+  <div id="balance-chart">
+    <div class="chart-summary" id="balance-chart-summary"></div>
+    <div id="balance-chart-detail" class="chart-detail" style="display: none;"></div>
+  </div>
+
 {{/selected}}
